Relese Tracker first push, Mock UI

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.logo-f1 {
+    font-family: 'Bebas Neue', cursive;
+}
+
+.w-500 {
+    width: 500px;
+}
+
+.text-blue-500 {
+    color: #5767c4 !important;
+}
+
+.bg-gray-550 {
+    background-color: rgb(109, 90, 122) !important;
+}
+
+.custom-bg-1 {
+   background-image: radial-gradient(circle at 90% 24%, rgba(209, 209, 209,0.04) 0%, rgba(209, 209, 209,0.04) 50%,rgba(160, 160, 160,0.04) 50%, rgba(160, 160, 160,0.04) 100%),radial-gradient(circle at 91% 63%, rgba(45, 45, 45,0.04) 0%, rgba(45, 45, 45,0.04) 50%,rgba(87, 87, 87,0.04) 50%, rgba(87, 87, 87,0.04) 100%),radial-gradient(circle at 17% 2%, rgba(124, 124, 124,0.04) 0%, rgba(124, 124, 124,0.04) 50%,rgba(117, 117, 117,0.04) 50%, rgba(117, 117, 117,0.04) 100%),linear-gradient(88deg, rgb(33, 20, 105),rgb(1, 15, 13));
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Custom CSS overriding Angular Material Styles
+.mat-flat-button.mat-primary, .mat-raised-button.mat-primary, .mat-fab.mat-primary, .mat-mini-fab.mat-primary {
+    background-color: #5767c4;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline-start { background-color: white!important; }
+.mat-form-field-appearance-outline .mat-form-field-outline-gap { background-color: white!important; }
+.mat-form-field-appearance-outline .mat-form-field-outline-end { background-color: white!important; }
+// mat-form-field mat-label { background-color: rgba(255, 255, 255, 0.9); }
+.mat-form-field-appearance-outline:not(.mat-form-field-disabled) .mat-form-field-flex:hover .mat-form-field-outline {
+    opacity: 1!important;
+}
