Modules and Routing updated, Release view screen

--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -23,7 +23,7 @@
                             <div class="mt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Closing On {{release.closeDate}}</div>
                         </div>
                         <div class="ml-4">
-                            <button mat-icon-button class="text-gray-600">
+                            <button mat-icon-button class="text-gray-600"  [routerLink]="['./', 567]">
                                 <mat-icon>keyboard_arrow_right</mat-icon>
                             </button>
                         </div>
