--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -4,4 +4,7 @@
 
     <!-- Content Component -->
     <app-content></app-content>
+
+    <!-- Main Module Routes -->
+    <router-outlet></router-outlet>
 </div>
