Project View Page Added, Minor UI Updates

--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -19,7 +19,7 @@
                                 <span class="text-sm text-gray-600">{{project.leadMember}}</span>
                             </div>
                             <div class="">
-                                <button mat-icon-button color="primary">
+                                <button mat-icon-button color="primary" [routerLink]="['./', 567]">
                                     <mat-icon>chevron_right</mat-icon>
                                 </button>
                             </div>
