--- a/src/app/modules/main/content/components/instances/instances.component.html
+++ b/src/app/modules/main/content/components/instances/instances.component.html
@@ -9,18 +9,34 @@
             <div class="w-full flex flex-wrap mt-3">
                 <div class="w-6/12 flex justify-center p-2" *ngFor="let instance of instanceList">
                     <div class="w-full p-4 border border-gray-200 hover:bg-gray-50 hover:border-gray-300 rounded-lg">
-                        <div class="text-gray-800 text-lg mb-2">{{instance.client}}</div>
+                        <div class="w-full flex justify-between items-center">
+                            <div class="text-gray-800 text-lg mb-2">{{instance.client}}</div>
+                            <button mat-icon-button class="">
+                                <mat-icon class="text-blue-500" matTooltip="Add New Instance">add_circle</mat-icon>
+                            </button>
+                        </div>
                         <div class="mb-4 flex justify-between items-end border-b border-gray-100 " *ngFor="let url of instance.instances">
                             <div class="">
                                 <span class="text-xs text-xs rounded-lg">{{url.type}}</span>
                                 <div class="text-blue-500 font-bold pt-1">{{url.path}}</div>
                                 <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: {{url.branch}}</div>
                             </div>
-                            <div class="">
-                                <div class="text-right">
-                                    <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(url.status)">{{url.status}}</span>
+                            <div class="flex items-start">
+                                <div class="">
+                                    <div class="text-right">
+                                        <span class="text-right text-xs px-3 rounded-full" [ngClass]="getStatusStyle(url.status)">{{url.status}}</span>
+                                    </div>
+                                    <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Created On {{instance.createdDate}}</div>
                                 </div>
-                                <div class="pt-1 text-gray-400 text-xs flex content-center"><mat-icon class="text-xs">date_range</mat-icon>Created On {{instance.createdDate}}</div>
+                                <div class="ml-4">
+                                    <button mat-icon-button [matMenuTriggerFor]="instanceMenu">
+                                        <mat-icon class="text-gray-700">more_vert</mat-icon>
+                                    </button>
+                                    <mat-menu #instanceMenu="matMenu">
+                                        <button mat-menu-item>Edit</button>
+                                        <button mat-menu-item>Delete</button>
+                                      </mat-menu>
+                                </div>
                             </div>
                             
                         </div>
