--- a/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
+++ b/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
@@ -47,7 +47,7 @@
                                         <div class="">
                                             <span class="text-xs text-xs rounded-lg">QA</span>
                                             <div class="text-blue-500 font-bold pt-1">test.xyz.in</div>
-                                            <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: develop</div>
+                                            <div class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer text-gray-400 py-1">Branch: develop</div>
                                         </div>
                                         <div class="flex items-start">
                                             <div class="">
@@ -71,7 +71,7 @@
                                         <div class="">
                                             <span class="text-xs text-xs rounded-lg">UAT</span>
                                             <div class="text-blue-500 font-bold pt-1">test.xyz.in</div>
-                                            <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: develop</div>
+                                            <div class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer text-gray-400 py-1">Branch: develop</div>
                                         </div>
                                         <div class="flex items-start">
                                             <div class="">
@@ -95,7 +95,7 @@
                                         <div class="">
                                             <span class="text-xs text-xs rounded-lg">Dev</span>
                                             <div class="text-blue-500 font-bold pt-1">test.xyz.in</div>
-                                            <div class="text-gray-500 text-xs text-gray-400 py-1">Branch: develop</div>
+                                            <div class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer text-gray-400 py-1">Branch: develop</div>
                                         </div>
                                         <div class="flex items-start">
                                             <div class="">
@@ -150,27 +150,35 @@
                <div class="w-4/12 pl-1">
                     <div class="w-full p-4 border border-gray-200 rounded-md">
                         <div class="w-full">
-                            <div class="flex justify-between">
+                            <div class="flex justify-between items-start">
                                 <div class="w-full text-lg text-gray-800">Members</div>
                                 <button mat-icon-button class="">
-                                    <mat-icon class="text-blue-500" matTooltip="Add New Member">add_circle</mat-icon>
+                                    <mat-icon class="text-blue-500 text-lg" matTooltip="Add New Member">person_add</mat-icon>
                                 </button>
                             </div>
                             <div class="mt-3">
-                                <span class="">Front-End Developers</span>
-                                <div class="text-gray-500 text-xs">4 Members</div>
+                                <div class="">Front-End Developers</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">4 Members</span>
                             </div>
                             <div class="mt-6">
-                                <span class="">Back-End Developers</span>
-                                <div class="text-gray-500 text-xs">6 Members</div>
+                                <div class="">Back-End Developers</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">6 Members</span>
                             </div>
                             <div class="mt-6">
-                                <span class="">QA</span>
-                                <div class="text-gray-500 text-xs">2 Members</div>
+                                <div class="">QA</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">2 Members</span>
                             </div>
                             <div class="mt-6">
-                                <span class="">Project Manager</span>
-                                <div class="text-blue-700">Sagar Desai</div>
+                                <div class="">Configurations & Support</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">2 Members</span>
+                            </div>
+                            <div class="mt-6">
+                                <div class="">Project Manager</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">Sagar Desai</span>
+                            </div>
+                            <div class="mt-6">
+                                <div class="">Project Lead</div>
+                                <span class="text-gray-500 text-xs hover:text-blue-600 cursor-pointer">Sagar Desai</span>
                             </div>
                         </div>
                     </div>
