--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -7,16 +7,18 @@
             <div class="w-full text-lg px-3 text-gray-800">Projects</div>
 
             <!-- List -->
-            <div class="w-full flex flex-wrap justify-start mt-4">
-                <div class="w-3/12 p-2" *ngFor="let project of projectsList">
-                    <div class="w-full p-4 border border-gray-200 rounded-md hover:border-gray-300 hover:shadow-lg">
-                        <div class="text-blue-500 text-lg">{{project.projectName}}</div>
-                        <div class="text-xs text-gray-400">{{project.totalMembers}} Members</div>
+            <div class="w-full flex flex-wrap justify-start my-8" *ngFor="let project of projectsList">
+                <div class="w-full px-3">{{project.clientName}}</div>
+                <div class="w-full px-3 text-xs text-gray-500">{{project.projects.length}} Projects</div>
+                <div class="w-3/12 p-2 mt-2" *ngFor="let item of project.projects">
+                    <div class="w-full p-3 border border-gray-200 rounded-md hover:border-gray-300 hover:shadow-lg">
+                        <div class="text-blue-500 text-base">{{item.projectName}}</div>
+                        <div class="text-xs text-gray-400">{{item.totalMembers}} Members</div>
                         <div class="mt-4 flex justify-between items-center">
                             <div class="">
                                 <span class="text-xs text-gray-400 ">Lead</span>
                                 <br>
-                                <span class="text-sm text-gray-600">{{project.leadMember}}</span>
+                                <span class="text-sm text-gray-600">{{item.leadMember}}</span>
                             </div>
                             <div class="">
                                 <button mat-icon-button color="primary" [routerLink]="['./', 567]">
