--- a/src/app/modules/main/content/components/releases/releases.component.html
+++ b/src/app/modules/main/content/components/releases/releases.component.html
@@ -5,7 +5,15 @@
         <div class="w-full p-3 border border-gray-200 rounded-md my-4">
             
             <!-- Title -->
-            <div class="w-full text-lg px-3 text-gray-800">All Releases</div>
+            <div class="w-full flex justify-between">
+                <div class="text-lg px-3 text-gray-800">All Releases</div>
+                <div class="">
+                    <button mat-button class="text-xs">
+                        <mat-icon class="text-lg -mt-1 -ml-2">filter_list</mat-icon> Filter
+                    </button>
+                </div>
+            </div>
+            
 
             <!-- Release List -->
             <div class="w-full mt-4">
