--- a/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
+++ b/src/app/modules/main/content/components/projects/components/project-view/project-view.component.html
@@ -13,8 +13,13 @@
         <div class="w-full mt-4">
             <!-- Title -->
             <div class="w-full flex justify-between items-center">
-                <div class="">
+                <div class="w-full flex justify-between">
                     <div class="text-2xl text-gray-700 flex items-center">Project Bazaar</div>
+                    <div class="">
+                        <button mat-stroked-button class="text-gray-600 text-xs">
+                            <mat-icon class="text-sm mt-1 -ml-2">edit</mat-icon> Edit Project
+                        </button>
+                    </div>
                 </div>
             </div>
 
