--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -14,7 +14,7 @@
             <!-- Title -->
             <div class="w-full flex justify-between items-center">
                 <div class="">
-                    <span class="text-lg cursor-pointer text-blue-600">IIFL</span>
+                    <span class="cursor-pointer text-blue-600">IIFL > Project Bazaar</span>
                     <div class="text-2xl text-gray-700 flex items-center">Release Version 1.0</div>
                 </div>
                 <div class="flex">
