Client Profile changes in progress, Mock Data updates on project component

--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -16,9 +16,9 @@
                         <div class="text-xs text-gray-400">{{item.totalMembers}} Members</div>
                         <div class="mt-4 flex justify-between items-center">
                             <div class="">
-                                <span class="text-xs text-gray-400 ">Lead</span>
+                                <span class="text-xs text-gray-400 ">Manager</span>
                                 <br>
-                                <span class="text-sm text-gray-600">{{item.leadMember}}</span>
+                                <span class="text-sm text-gray-600">{{item.projectManager}}</span>
                             </div>
                             <div class="">
                                 <button mat-icon-button color="primary" [routerLink]="['./', 567]">
