--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -7,7 +7,7 @@
             <div class="w-full text-lg px-3 text-gray-800">Projects</div>
 
             <!-- List -->
-            <div class="w-full flex flex-wrap justify-start my-8" *ngFor="let project of projectsList">
+            <!-- <div class="w-full flex flex-wrap justify-start my-8" *ngFor="let project of projectsList">
                 <div class="w-full px-3">{{project.clientName}}</div>
                 <div class="w-full px-3 text-xs text-gray-500">{{project.projects.length}} Projects</div>
                 <div class="w-3/12 p-2 mt-2" *ngFor="let item of project.projects">
@@ -28,6 +28,50 @@
                         </div>
                     </div>
                 </div>
+            </div> -->
+
+            <div class="w-full p-3">
+                <table mat-table [dataSource]="projectsList" class="w-full border border-gray-200 rounded-md">
+                  
+                    <!-- Position Column -->
+                    <ng-container matColumnDef="projectName">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project </th>
+                      <td mat-cell *matCellDef="let element" class="text-blue-600"> {{element.projectName}} </td>
+                    </ng-container>
+                  
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="clientName">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Client </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.clientName}} </td>
+                    </ng-container>
+                  
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="projectType">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project Type </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.projectType}} </td>
+                    </ng-container>
+                  
+                    <!-- Symbol Column -->
+                    <ng-container matColumnDef="projectManager">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project Manager </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.projectManager}} </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="totalMembers">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Total Members </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> {{element.totalMembers}} Members </td>
+                    </ng-container>
+
+                    <!-- Weight Column -->
+                    <ng-container matColumnDef="actions">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Actions </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> <button mat-icon-button class=""><mat-icon>more_vert</mat-icon></button> </td>
+                    </ng-container>
+                  
+                    <tr mat-header-row *matHeaderRowDef="projectDisplayColumns" class="bg-gray-50"></tr>
+                    <tr mat-row *matRowDef="let row; columns: projectDisplayColumns;" class="cursor-pointer hover:bg-gray-50"></tr>
+                </table>
             </div>
         </div>
         
