--- a/src/app/modules/main/content/components/projects/projects.component.html
+++ b/src/app/modules/main/content/components/projects/projects.component.html
@@ -36,7 +36,7 @@
                     <!-- Position Column -->
                     <ng-container matColumnDef="projectName">
                       <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project </th>
-                      <td mat-cell *matCellDef="let element" class="text-blue-600"> {{element.projectName}} </td>
+                      <td mat-cell *matCellDef="let element" class="text-blue-600" [routerLink]="['./', 567]"> {{element.projectName}} </td>
                     </ng-container>
                   
                     <!-- Name Column -->
