--- a/src/app/modules/main/content/components/clients/clients.component.html
+++ b/src/app/modules/main/content/components/clients/clients.component.html
@@ -23,9 +23,9 @@
                     </ng-container>
                   
                     <!-- Name Column -->
-                    <ng-container matColumnDef="tags">
-                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Tags </th>
-                      <td mat-cell *matCellDef="let element" class="text-gray-600"> <span class="bg-gray-100 px-2 py-1 rounded-md mr-2 border border-gray-200" *ngFor="let tag of element.tags">{{tag}}</span> </td>
+                    <ng-container matColumnDef="lables">
+                      <th mat-header-cell *matHeaderCellDef class="text-xs font-bold"> Project Lables </th>
+                      <td mat-cell *matCellDef="let element" class="text-gray-600"> <span class="bg-gray-100 px-2 py-1 rounded-md mr-2 border border-gray-200" *ngFor="let tag of element.lables">{{tag}}</span> </td>
                     </ng-container>
                   
                     <!-- Weight Column -->
